Actualizado logo a Tecnodos

--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
         }
 
         .logo {
-            font-size: 1.5rem;
-            font-weight: bold;
-            color: var(--primary);
-        }
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--primary);
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+}
 
         .nav-links {
             display: flex;
@@ -196,7 +198,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">Logo</div>
+            <div class="logo">Tecnodos</div>
             <div class="nav-links">
                 <a href="#features">Características</a>
                 <a href="#about">Nosotros</a>
