--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h1>Potencia tu investigación e innovación con datos científicos</h1>
+            <h1>Mejora tu gestion de investigación con datos científicos</h1>
             <p>Especialistas en scientometrics, análisis de innovación y vigilancia tecnológica. Transformamos datos científicos en decisiones estratégicas para impulsar tu organización.</p>
             <a href="#contact" class="button button-primary">Solicitar consultoría</a>
         </div>
