--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tecnodos - Consultoría en Scientometrics e Innovación</title>
+    <title>Tecnodos - Consultoría en Cienciometria e Innovación</title>
     <style>
         :root {
             --primary: #2C3E50;    /* Azul profesional oscuro */
