--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
             </div>
             <div>
                 <h3>Contacto</h3>
-                <p>Email: contacto@tecnodos.com</p>
+                <p>Email: contacto@tecnodos.cl</p>
                 <p>Tel: +56 912345678</p>
             </div>
             <div>
