add changes in index.html

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
      <section class="hero">
          <div class="hero-content">
              <h1>Mejora tu gestion de investigación con datos científicos</h1>
-             <p>Especialistas en scientometrics, análisis de innovación y vigilancia tecnológica. Transformamos datos científicos en decisiones estratégicas para impulsar tu organización.</p>
+             <p>Especialistas en cienciometria, análisis de innovación y vigilancia tecnológica. Transformamos datos científicos en decisiones estratégicas para impulsar tu organización.</p>
              <a href="#contact" class="button button-primary">Solicitar consultoría</a>
          </div>
      </section>
