--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
                         <p>Análisis cuantitativo de la producción científica y su impacto.</p>
                     </a>
                     <a href="services/innovacion.html" class="service-card">
-                        <h3>Innovación</h3>
+                        <h3>Gestión de Innovación</h3>
                         <p>Asesoramiento estratégico para gestionar y potenciar la innovación.</p>
                     </a>
                     <a href="services/vigilancia.html" class="service-card">
